NIFI-13192 Upgraded AWS S3 Processors to use AWS 2.x libraries